simplify description of advanced approaches when GLM assumptions are violated in ch19

--- a/chapter-14.ipynb
+++ b/chapter-14.ipynb
@@ -12,14 +12,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d7152597",
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Installing package into '/Library/Frameworks/R.framework/Versions/4.3-arm64'\n",
+      "(as 'lib' is unspecified)\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "The downloaded binary packages are in\n",
+      "\t/var/folders/mg/1wy1xcls587_h0tqnj42l5740000gn/T//RtmpKamlCO/downloaded_packages\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Installing package into '/Library/Frameworks/R.framework/Versions/4.3-arm64'\n",
+      "(as 'lib' is unspecified)\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "The downloaded binary packages are in\n",
+      "\t/var/folders/mg/1wy1xcls587_h0tqnj42l5740000gn/T//RtmpKamlCO/downloaded_packages\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading required package: ggplot2\n",
+      "\n",
+      "Loading required package: scales\n",
+      "\n",
+      "\n",
+      "Attaching package: 'scales'\n",
+      "\n",
+      "\n",
+      "The following object is masked from 'package:supernova':\n",
+      "\n",
+      "    number\n",
+      "\n",
+      "\n",
+      "Loading required package: ggridges\n",
+      "\n",
+      "\n",
+      "New to ggformula?  Try the tutorials: \n",
+      "\tlearnr::run_tutorial(\"introduction\", package = \"ggformula\")\n",
+      "\tlearnr::run_tutorial(\"refining\", package = \"ggformula\")\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Run this first so it's ready by the time you need it\n",
     "install.packages(\"supernova\")\n",
@@ -249,14 +312,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "8bee43d4",
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "Call:\n",
+       "lm(formula = status_conferral ~ target_gender + target_reaction, \n",
+       "    data = brescoll2008)\n",
+       "\n",
+       "Coefficients:\n",
+       "           (Intercept)       target_gendermale  target_reactionsadness  \n",
+       "                4.5656                  0.6150                 -0.3504  \n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "brescoll2008 <- read.csv(\"https://raw.githubusercontent.com/smburns47/Psyc158/main/brescoll2008_sim.csv\")\n",
     "\n",
@@ -277,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "be258ff9",
    "metadata": {
     "scrolled": true,
@@ -285,7 +365,30 @@
      "languageId": "r"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "Call:\n",
+       "lm(formula = status_conferral ~ target_gender + target_reaction + \n",
+       "    target_gender * target_reaction, data = brescoll2008)\n",
+       "\n",
+       "Coefficients:\n",
+       "                             (Intercept)  \n",
+       "                                   3.820  \n",
+       "                       target_gendermale  \n",
+       "                                   2.129  \n",
+       "                  target_reactionsadness  \n",
+       "                                   1.130  \n",
+       "target_gendermale:target_reactionsadness  \n",
+       "                                  -2.995  \n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "interaction_model <- lm(status_conferral ~ target_gender + target_reaction + target_gender*target_reaction, \n",
     "                        data = brescoll2008)\n",
@@ -757,7 +860,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.2.3"
+   "version": "4.3.2"
   }
  },
  "nbformat": 4,
