--- a/chapter-19.ipynb
+++ b/chapter-19.ipynb
@@ -894,42 +894,13 @@
    "source": [
     "## 19.10 What to do about model assumption violations\n",
     "\n",
-    "If the ```check_model()``` plot tells you no assumptions are seriously violated, then you are good to use the GLM to test your hypotheses about your data. However, if any of these assumptions are violated, then you shouldn't trust the effect estimates or statistical significance given by the GLM. Instead, depending on what these assumption violations are, there are some alternative approaches you can use.\n",
-    "\n",
-    "First, if your assumption checks indicated multicollinearity, you should consider pruning down the set of variables in your model. How you do this depends on the meaning of the variables, and what your hypotheses are. If one variable is more important to you than other, you could consider leaving out the less important one. Alternatively, two highly correlated predictors might be measuring the same underlying construct. In this case, you could consider combining the variables into one measure (by averaging or summing) to use in the model. \n",
-    "\n",
-    "Next, if your leverage plot identified outliers with high leverage, you could consider removing those values from the dataset. Sometimes this also fixes issues other assumption violations, if those violations were because of the residual associated with high-leverage outliers. For example, we identified small violations of linearity and homogeneity of variance in the model above, but also a high-leverage outlier. let's see what happens if we remove that outlier, which was identified to be observation number 48:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "28164f8c",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "GSS_removed <- GSS_subset[-48,]\n",
-    "m <- lm(highest_year_of_school_completed ~ highest_year_school_completed_father + born_in_us, \n",
-    "        data = GSS_removed)\n",
-    "check_model(m)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "da4bee3e",
-   "metadata": {},
-   "source": [
-    "Now there are no more high leverage outliers, and the linearity check looks much better. There may still be an issue with homogenity of variance though, so finally the last consideration to make is whether a different type of model besides the GLM would do a better job. These alternative types of models are outside the scope of this intro course, but here are some common choices for each assumption violation if you want to read more yourself: \n",
+    "If the ```check_model()``` plot tells you no assumptions are seriously violated, then you are good to use the GLM to test your hypotheses about your data. However, if any of these assumptions are violated, then you shouldn't trust the effect estimates or statistical significance given by the GLM. Instead, depending on what these assumption violations are, there are some alternative approaches you can use. These are advanced approaches beyond the scope of this intro class, but below are common options that you can read more about if you'd like:\n",
     "\n",
     "- Non-linear modeling: if the assumption of linearity is violated, this implies that a straight line is not the best relationship between a predictor and outcome. Other forms may better describe this relationship that you can capture by transforming a predictor variable (e.g., by log transforming X or making it into a quadratic term). Alternatively you can use tools that make more general assumptions, such as \"when X goes up some amount Y goes up some amount\" (i.e. [Spearman Rank Correlation](https://en.wikipedia.org/wiki/Spearman%27s_rank_correlation_coefficient)) or \"uncertainty in Y is reduced by knowing X\" (i.e. [Mutual Information](https://en.wikipedia.org/wiki/Mutual_information)). \n",
     "\n",
-    "- Dimensionality reduction: An option of dealing with multicollinearity when there are a lot of predictors to think about. Different tools deal with this problem differently, but generally search for the amount of shared variation between the multicollinear predictors and make new variable(s) just out of that. Such tools include [factor analysis](https://towardsdatascience.com/exploratory-factor-analysis-in-r-e31b0015f224), [principle component analysis](https://www.r-bloggers.com/2021/05/principal-component-analysis-pca-in-r/), and [ridge regression](https://www.statology.org/ridge-regression-in-r/).\n",
+    "- Dimensionality reduction: The simplest way to deal with multicollinearity is to remove less important variables from your model, as this may be happening because one variable is essentially the same construct as another. However if it's not clear what variable should just be removed, there are more advanced tools that search for the amount of shared variation between the multicollinear predictors and make new variable(s) just out of that. Such tools include [factor analysis](https://towardsdatascience.com/exploratory-factor-analysis-in-r-e31b0015f224), [principle component analysis](https://www.r-bloggers.com/2021/05/principal-component-analysis-pca-in-r/), and [ridge regression](https://www.statology.org/ridge-regression-in-r/).\n",
     "\n",
-    "- Robust regression: The math underlying the GLM uses sum of squares to quantify model residuals and find the best-fitting regression line. This approach is also called ordinary least squares (OLS) regression. Because of this, large residuals have an outsized impact on the eventual model fit (because their magnitude is squared). But this isn't the only way we could quantify a residual. Another approach called [robust regression](https://stats.oarc.ucla.edu/r/dae/robust-regression/) weights the contribution of residuals by their leverage. This means that high leverage points or non-normal residuals have less influence on the final parameter estimates. This preserves more degrees of freedom and thus statistical power than simply removing a bunch of data points.  "
+    "- Robust estimation: The simplest way to try and deal with leverage, non-normal residuals, and heteroscedasticity is to remove specific outliers that are the reason for the problem. But if the problem isn't due to specific outliers that you can find, or if your power is so low that removing data points is a problem, there are other modeling options such as [robust regression](https://stats.oarc.ucla.edu/r/dae/robust-regression/), which weights the contribution of data points to the model fit by their leverage. This means that high leverage points or non-normal residuals have less influence on the final parameter estimates. This preserves more degrees of freedom and thus statistical power than simply removing a bunch of data points. "
    ]
   },
   {
@@ -963,7 +934,7 @@
     "A nonrepresentative sample doesn't *guarantee* that your estimates will be biased. Estimates will only be biased if your sample is non-representative on variables that are involved in the data generation process you are investigating. If you are investigating the relationship between money and happiness but only have a sample of right-handed people, there's a pretty good argument to make that being right or left handed doesn't influence how happy money makes you. So the assumption of representativeness only applies to variables that are involved in the particular data generation process you are investigating. \n",
     "\n",
     "### Omitted variable bias\n",
-    "In doing research and building theory, we are trying to create a model that closely approximates the data generation process. This means we hope to identify the predictor variables that are important for creating the outcome variable, with the right relationships between them. If we leave out important parts of the data generation process, especially variables that confound other predictors or are involved in interactions with other predictors, this will create bias in the parameter estimates for the predictors we do have. Such bias is called **omitted variable bias**. Omitted variable bias is responsible for erroneous conclusions in psychology, such as the notion that [the marshmellow test predicts self-control ability](https://www.washingtonpost.com/science/2024/08/29/research-bias-cognitive-studies-executive-function-marshmallow-test/) or that [AI can accurately read people's emotions through their facial expressions](https://www.scientificamerican.com/article/darwin-was-wrong-your-facial-expressions-do-not-reveal-your-emotions/). In both these cases, important other variables like SES or cultural background better explain or moderate the initial effect.\n",
+    "In doing research and building theory, we are trying to create a model that closely approximates the data generation process. This means we hope to identify the predictor variables that are important for creating the outcome variable, with the right relationships between them. If we leave out important parts of the data generation process, especially variables that confound other predictors or are involved in interactions with other predictors, this will create bias in the parameter estimates for the predictors we do have. Such bias is called **omitted variable bias**. Omitted variable bias is responsible for erroneous conclusions in psychology, such as the notion that [the marshmellow test predicts self-control ability](https://www.washingtonpost.com/science/2024/08/29/research-bias-cognitive-studies-executive-function-marshmallow-test/) or that [AI can accurately read people's emotions through their facial expressions](https://www.scientificamerican.com/article/darwin-was-wrong-your-facial-expressions-do-not-reveal-your-emotions/), or that [you can detect lies with a polygraph test](https://www.vox.com/2014/8/14/5999119/polygraphs-lie-detectors-do-they-work). In all these cases, important other variables like cultural background or basic physiological processes better explain or moderate the initial effect.\n",
     "\n",
     "To avoid omitted variable bias, we need to think hard about what is known of the true data generation process of an outcome variable, not just one predictor we are interested in. This means staying up to date with the latest research literature on your topic of interest and plotting out conceptual models with as much detail as one can. We should then collect these other important variables in our study and incorporate them into our modeling procedure. \n",
     "\n",
