remove bayesian chapter, make it optional

--- a/chapter-19.ipynb
+++ b/chapter-19.ipynb
@@ -938,7 +938,7 @@
     "\n",
     "To avoid omitted variable bias, we need to think hard about what is known of the true data generation process of an outcome variable, not just one predictor we are interested in. This means staying up to date with the latest research literature on your topic of interest and plotting out conceptual models with as much detail as one can. We should then collect these other important variables in our study and incorporate them into our modeling procedure. \n",
     "\n",
-    "### Non-interval outcome variable\n",
+    "### Qualitative outcome variable\n",
     "Many of the model assumptions discussed earlier end up violated in cases when there are not a lot of unique values in the outcome variable - e.g. when it is ordinal or categorical. Consider an example where you are predicting what political party someone will join as a function of their SES. With the form of the GLM that we have learned in this course, we could predict something quantitative like position on a liberal/conservative spectrum. But if the outcome variable has instead been recorded as \"Democrat\" and \"Republican\", this is categorical information. There's no \"increase in Y\" we can predict in this case because there aren't quantitative values to this variable.\n",
     "\n",
     "For this reason, the problems with dichotomizing a predictor variable persist when dichotomizing an outcome variable. If at all possible, one should avoid dichotomization/binning at the time of data collection.\n",
