remove sensitivity analysis ch18

--- a/chapter-19.ipynb
+++ b/chapter-19.ipynb
@@ -871,7 +871,7 @@
    "id": "d9d44fd9",
    "metadata": {},
    "source": [
-    "### 7) Categorical outcome variable\n",
+    "### 7) Non-numeric outcome variable\n",
     "\n",
     "We've talked about the problem with dichotomizing a variable before modeling - it introduces more error. The same is true if we go the other way, and try to turn a truly categorical variable into something continuous. Consider an example where you are predicting whether a new drug treatment will impact cancer prognosis. With the form of the GLM that we have learned in this course, we could predict something quantitative like white blood cell count. But if the outcome variable has instead been recorded as \"Recovered\" or \"Not Recovered\", this is categorical information. There's no \"increase in Y for every 1 unit of X\" we can predict in this case because there aren't quantitative values to this variable.\n",
     "\n",
