use effectsize::cohens_f_squared() instead of cohens_f() in ch18

--- a/chapter-18.ipynb
+++ b/chapter-18.ipynb
@@ -317,7 +317,7 @@
     "\n",
     "Rather than being bound between 0 and 1 as $R^2$ is, $f^2$ can be as small as 0 and theoretically as large as infinity. A bigger $f^2$ means a model is explaining more variation. If $f^2$ is above 1, then the model explains more variation than what is left unexplained. In psychology that is rare but not unheard of. \n",
     "\n",
-    "The above equation is known as the **global $f^2$**, or the $f^2$ score for a model compared to the null model. You can get $f$ in the ```effectsize``` package by passing a model object to the ```cohens_f()``` function:"
+    "The above equation is known as the **global $f^2$**, or the $f^2$ score for a model compared to the null model. You can get $f^2$ in the ```effectsize``` package by passing a model object to the ```cohens_f_squared()``` function:"
    ]
   },
   {
@@ -331,10 +331,10 @@
    },
    "outputs": [],
    "source": [
-    "cohens_f(unstandardized_model)\n",
+    "cohens_f_squared(unstandardized_model)\n",
     "\n",
-    "#verifying that it is the same as sqrt(R2 / (1-R2))\n",
-    "sqrt(summary(unstandardized_model)$r.squared / (1 - summary(unstandardized_model)$r.squared))"
+    "#verifying that it is the same as R2 / (1-R2)\n",
+    "summary(unstandardized_model)$r.squared / (1 - summary(unstandardized_model)$r.squared)"
    ]
   },
   {
