revise wording of issue with bias in ch21

--- a/chapter-21.ipynb
+++ b/chapter-21.ipynb
@@ -184,7 +184,7 @@
     "\n",
     "P-hacking is one way we can end up lying to ourselves and to the public about what conclusions we can safely draw from data. But it's also important to keep in mind all the other ways we've learned about that modeling can be done incorrectly. Even if you define an *a priori* hypothesis, report all your results, and correct for any multiple comparisons, using your statistics inappropriately will lead to faulty conclusions. In this section, we will summarize the bad statistical practices we have discussed earlier in the course and link to where we explored them in more detail. \n",
     "\n",
-    "- [Ch 19, **violating the assumptions of linear models**](https://colab.research.google.com/github/smburns47/Psyc158/blob/main/chapter-19.ipynb#scrollTo=7740fe3d): If the assumptions of the general linear model are violated by the data/modeling procedure, the estimates and/or the standard errors we measure will be biased and we may come to the wrong conclusion about the size/precision of that estimate.  \n",
+    "- [Ch 19, **ignoring bias in linear models**](https://colab.research.google.com/github/smburns47/Psyc158/blob/main/chapter-19.ipynb#scrollTo=7740fe3d): If there is bias in our results due to the data/modeling procedure, the estimates and/or the standard errors we measure will be systematically off and we may come to the wrong conclusion about the size/reliability of that estimate.  \n",
     "\n",
     "- [Ch 12, **binning/dichotomizing continuous predictors**](https://colab.research.google.com/github/smburns47/Psyc158/blob/main/chapter-12.ipynb#scrollTo=9e703d74): Mis-specifying the datatype of continuous data can change how much error our model explains and the estimated effect size of the variable.\n",
     "\n",
