forcing dplyr version=1.1.4 for now, while we wait for Colab kernel to update vctrs version to 0.7.1

--- a/chapter-4.ipynb
+++ b/chapter-4.ipynb
@@ -106,7 +106,9 @@
    },
    "outputs": [],
    "source": [
-    "install.packages(\"dplyr\")  #downloading package from the internet - this may take a few moments\n",
+    "#install.packages(\"dplyr\")  #downloading package from the internet - this may take a few moments\n",
+    "require(devtools) #2/9/26 - newest version of dplyr causing an issue with Colab - forcing older version until fixed\n",
+    "install_version('dplyr', version='1.1.4')\n",
     "library(dplyr)             #loading package from library into workspace\n",
     "\n",
     "#Make a prediction, what do you think this code will do? \n",
