forcing dplyr version=1.1.4 for now, while we wait for Colab kernel to update vctrs version to 0.7.1

--- a/chapter-7.ipynb
+++ b/chapter-7.ipynb
@@ -24,7 +24,9 @@
     "# This chapter uses some packages that take a few minutes to download on Google Colab. \n",
     "# Run this first so it's ready by the time you need it\n",
     "install.packages(\"ggformula\")\n",
-    "install.packages(\"dplyr\")\n",
+    "#install.packages(\"dplyr\")\n",
+    "require(devtools) #2/9/26 - newest version of dplyr causing an issue with Colab - forcing older version until fixed\n",
+    "install_version('dplyr', version='1.1.4')\n",
     "library(ggformula)\n",
     "library(dplyr)"
    ]
