forcing dplyr version=1.1.4 for now, while we wait for Colab kernel to update vctrs version to 0.7.1- chapters 11-15

--- a/chapter-15.ipynb
+++ b/chapter-15.ipynb
@@ -22,7 +22,9 @@
    "outputs": [],
    "source": [
     "# Run this first so it's ready by the time you need it\n",
-    "install.packages(\"dplyr\")\n",
+    "#install.packages(\"dplyr\")\n",
+    "require(devtools) #2/9/26 - newest version of dplyr causing an issue with Colab - forcing older version until fixed\n",
+    "install_version('dplyr', version='1.1.4')\n",
     "install.packages(\"ggformula\")\n",
     "install.packages(\"interactions\")\n",
     "library(dplyr)\n",
