--- a/chapter-11.ipynb
+++ b/chapter-11.ipynb
@@ -24,7 +24,9 @@
     "# Run this first so it's ready by the time you need it\n",
     "install.packages(\"ggformula\")\n",
     "install.packages(\"supernova\")\n",
-    "install.packages(\"dplyr\")\n",
+    "#install.packages(\"dplyr\")\n",
+    "require(devtools) #2/9/26 - newest version of dplyr causing an issue with Colab - forcing older version until fixed\n",
+    "install_version('dplyr', version='1.1.4')\n",
     "library(ggformula)\n",
     "library(supernova)\n",
     "library(dplyr)\n",
