--- a/chapter-12.ipynb
+++ b/chapter-12.ipynb
@@ -22,7 +22,9 @@
    "outputs": [],
    "source": [
     "# Run this first so it's ready by the time you need it\n",
-    "install.packages(\"dplyr\")\n",
+    "#install.packages(\"dplyr\")\n",
+    "require(devtools) #2/9/26 - newest version of dplyr causing an issue with Colab - forcing older version until fixed\n",
+    "install_version('dplyr', version='1.1.4')\n",
     "install.packages(\"supernova\")\n",
     "install.packages(\"ggformula\")\n",
     "library(dplyr)\n",
